--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ li {
 	display: flex;
 	justify-content: space-between;
 	width: 503px;
-	height: 101px;
+	min-height: 101px;
 	padding: 5px 15px;
 	border: 1px solid #000;
 	box-sizing: border-box;
